--- a/inc10a-reshape - 28 Nov 2023.Rmd
+++ b/inc10a-reshape - 28 Nov 2023.Rmd
@@ -4,3 +4,44 @@ output: html_document
 date: "2023-11-28"
 ---
 
+```{r}
+library(tidyverse)
+library(dyplr)
+gdp <- read_delim("C:/Users/David/OneDrive - UW/fall qtr 2023/INFO 201/RStudio/RStudio Directory/in-class-demo/oecd-gdp.csv.bz2")
+gdp
+```
+```{r}
+gdpLong <-
+  gdp %>% 
+  pivot_longer(!c(country,indicator),
+                names_to = "year",
+                values_to = "gdp") %>% 
+  mutate(year = as.numeric(year))
+gdpLong %>% 
+  head(10)
+```
+
+```{r}
+p <- data.frame(pregnant = c("Yes", "No"),
+            	male = c(NA, 25),
+            	female = c(11, 18))
+p
+```
+
+```{r}
+pl <- p %>% 
+  pivot_longer(c(male, female),
+               names_to = "sex",
+               values_to = "count")
+pl
+```
+
+```{r}
+pl %>% 
+  pivot_wider(id_cols = pregnant,
+              names_from = sex,
+              values_from = count)
+```
+
+
+
